Answered the first data analysis question

--- a/index.ipynb
+++ b/index.ipynb
@@ -585,8 +585,8 @@
     "    print(imdb_df)\n",
     "    print(\"-\" * 50)\n",
     "\n",
-    "# Close connection \n",
-    "conn.close()"
+    "# # Close connection \n",
+    "# conn.close()"
    ]
   },
   {
@@ -795,6 +795,120 @@
    ],
    "source": [
     "print_missing_values(imdb_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I am doing my analysis on of the questions set in the Business Understanding:\n",
+    "1. What are the top 5 genres currently trending?\n",
+    "- The data being used in this analysis is the im.db where I'll be using the two tables prepared above; movie_basics and movie_ratings\n",
+    "- Joined the two tables movie_basics and movie_ratings based on the movie_id key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined DataFrame\n",
+      "    movie_id                    primary_title                genres  \\\n",
+      "0  tt0063540                        Sunghursh    Action,Crime,Drama   \n",
+      "1  tt0066787  One Day Before the Rainy Season       Biography,Drama   \n",
+      "2  tt0069049       The Other Side of the Wind                 Drama   \n",
+      "3  tt0069204                  Sabse Bada Sukh          Comedy,Drama   \n",
+      "4  tt0100275         The Wandering Soap Opera  Comedy,Drama,Fantasy   \n",
+      "\n",
+      "   averagerating  numvotes  \n",
+      "0            7.0        77  \n",
+      "1            7.2        43  \n",
+      "2            6.9      4517  \n",
+      "3            6.1        13  \n",
+      "4            6.5       119  \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''SELECT mb.movie_id, mb.primary_title, mb.genres, mr.averagerating, mr.numvotes\n",
+    "            FROM movie_basics AS mb\n",
+    "            JOIN movie_ratings AS mr\n",
+    "            ON mb.movie_id = mr.movie_id''' \n",
+    "\n",
+    "\n",
+    "combined_movie_df = pd.read_sql(query, conn)\n",
+    "conn.close()\n",
+    "\n",
+    "print('Combined DataFrame')\n",
+    "print(combined_movie_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Since the genres are stored as a list of many genres in a row, it is necessary to split them into individual rows\n",
+    "- I will also group the Combined DataFrame by genre and calculate the average ratings of each genre as well as the total number of votes\n",
+    "- Then sort to get the top 5 genres by average ratings and the top 5 genres by total number of votes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 5 Genres by Average Rating:\n",
+      "         genres  averagerating  numvotes\n",
+      "21        Short       8.800000         8\n",
+      "7   Documentary       7.332090   4739345\n",
+      "11    Game-Show       7.300000      3469\n",
+      "17         News       7.271330    123319\n",
+      "4     Biography       7.162274  21609446\n",
+      "\n",
+      "Top 5 Genres by Total Number of Votes:\n",
+      "       genres  averagerating   numvotes\n",
+      "8       Drama       6.401559  119567500\n",
+      "0      Action       5.810361  101161682\n",
+      "2   Adventure       6.196201   84232589\n",
+      "5      Comedy       6.002689   74305805\n",
+      "23   Thriller       5.639114   48155313\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_movie_df['genres'] = combined_movie_df['genres'].str.split(',')\n",
+    "combined_movie_df = combined_movie_df.explode('genres')\n",
+    "\n",
+    "genre_stats = combined_movie_df.groupby('genres').agg({\n",
+    "    'averagerating': 'mean',\n",
+    "    'numvotes': 'sum'\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Sort by average rating and total number of votes to get the top 5 genres\n",
+    "top_genres_by_rating = genre_stats.sort_values(by='averagerating', ascending=False).head(5)\n",
+    "top_genres_by_votes = genre_stats.sort_values(by='numvotes', ascending=False).head(5)\n",
+    "\n",
+    "print(\"\\nTop 5 Genres by Average Rating:\")\n",
+    "print(top_genres_by_rating)\n",
+    "\n",
+    "print(\"\\nTop 5 Genres by Total Number of Votes:\")\n",
+    "print(top_genres_by_votes)"
    ]
   }
  ],
