Answering the second analysis

--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
     "The head of Microsoft needs to know what types of films are trending so that they can be at the top of the game when opening their new movie studio\n",
     "### Some of the questions to be answer\n",
     "1. What are the top 5 genres currently trending?\n",
-    "2. How much do certain genres generate?\n",
+    "2. What genres generate the highest gross\n",
     "3. What is the average time of movies?"
    ]
   },
@@ -909,6 +909,255 @@
     "\n",
     "print(\"\\nTop 5 Genres by Total Number of Votes:\")\n",
     "print(top_genres_by_votes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. What genres genrate the highest gross?\n",
+    "- The data being used is a combination of bom.movie_gross.csv data and the im.db data.\n",
+    "- The reason for the merged DataFrames is because the imdb_df contains the list genres while the bom_movie_gross_df contains the domestic and foreign gross data.\n",
+    "- I am merging the two dataframes using the primary key title and primary_title respectively. This is after I saw those that both columns don't have missing values as well as both columns are unique to the whole table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Exploded and Cleaned DataFrame:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>studio</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>foreign_gross</th>\n",
+       "      <th>year</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>averagerating</th>\n",
+       "      <th>numvotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>415000000.0</td>\n",
+       "      <td>652000000.0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>tt0435761</td>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>682218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>415000000.0</td>\n",
+       "      <td>652000000.0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>tt0435761</td>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>682218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>415000000.0</td>\n",
+       "      <td>652000000.0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>tt0435761</td>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>682218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>292600000.0</td>\n",
+       "      <td>535700000.0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>tt1375666</td>\n",
+       "      <td>Inception</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>1841066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>292600000.0</td>\n",
+       "      <td>535700000.0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>tt1375666</td>\n",
+       "      <td>Inception</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>1841066</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         title studio  domestic_gross  foreign_gross  year   movie_id  \\\n",
+       "0  Toy Story 3     BV     415000000.0    652000000.0  2010  tt0435761   \n",
+       "1  Toy Story 3     BV     415000000.0    652000000.0  2010  tt0435761   \n",
+       "2  Toy Story 3     BV     415000000.0    652000000.0  2010  tt0435761   \n",
+       "3    Inception     WB     292600000.0    535700000.0  2010  tt1375666   \n",
+       "4    Inception     WB     292600000.0    535700000.0  2010  tt1375666   \n",
+       "\n",
+       "  primary_title     genres  averagerating  numvotes  \n",
+       "0   Toy Story 3  Adventure            8.3    682218  \n",
+       "1   Toy Story 3  Animation            8.3    682218  \n",
+       "2   Toy Story 3     Comedy            8.3    682218  \n",
+       "3     Inception     Action            8.8   1841066  \n",
+       "4     Inception  Adventure            8.8   1841066  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total Gross by Genre DataFrame:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genres</th>\n",
+       "      <th>total_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Action</td>\n",
+       "      <td>1.063727e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>1.194914e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Animation</td>\n",
+       "      <td>3.879844e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Biography</td>\n",
+       "      <td>1.310094e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>7.714817e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      genres   total_gross\n",
+       "0     Action  1.063727e+11\n",
+       "1  Adventure  1.194914e+11\n",
+       "2  Animation  3.879844e+10\n",
+       "3  Biography  1.310094e+10\n",
+       "4     Comedy  7.714817e+10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Merge the datasets\n",
+    "merged_df = pd.merge(bom_movie_gross_df, combined_movie_df, left_on='title', right_on='primary_title', how='inner')\n",
+    "\n",
+    "# Split genres and explode the DataFrame\n",
+    "merged_df['genres'] = merged_df['genres'].str.split(',')\n",
+    "exploded_df = merged_df.explode('genres')\n",
+    "\n",
+    "# Convert foreign_gross to string, remove commas, and convert to float\n",
+    "exploded_df['foreign_gross'] = exploded_df['foreign_gross'].astype(str).str.replace(',', '')\n",
+    "exploded_df['foreign_gross'] = exploded_df['foreign_gross'].replace('', 0).fillna(0).astype(float)\n",
+    "\n",
+    "# Display the DataFrame after processing foreign_gross\n",
+    "print(\"\\nExploded and Cleaned DataFrame:\")\n",
+    "display(exploded_df.head())\n",
+    "\n",
+    "# Calculate total gross for each genre\n",
+    "exploded_df['total_gross'] = exploded_df['domestic_gross'] + exploded_df['foreign_gross']\n",
+    "genre_gross = exploded_df.groupby('genres')['total_gross'].sum().reset_index()\n",
+    "\n",
+    "# Display the genre gross DataFrame\n",
+    "print(\"\\nTotal Gross by Genre DataFrame:\")\n",
+    "display(genre_gross.head())\n",
+    "\n",
+    "# Sort values for better visualization\n",
+    "genre_gross = genre_gross.sort_values(by='total_gross', ascending=False)"
    ]
   },
   {
