Visualizing the third analysis

--- a/index.ipynb
+++ b/index.ipynb
@@ -1341,7 +1341,7 @@
     "# Fill the area between the common runtime range\n",
     "plt.fill_between([min(imdb_df['start_year']), max(imdb_df['start_year'])], common_runtime_range[0], common_runtime_range[1], color='lightgrey', label='Common Runtime Range')\n",
     "\n",
-    "# Annotate the overall average runtime\n",
+    "# Writing the average time in the graph\n",
     "plt.text(min(imdb_df['start_year']) + 0.1, overall_average_runtime + 5, f'Overall Average: {overall_average_runtime:.2f} minutes', color='red')\n",
     "\n",
     "# Set labels and title\n",
