Top 5 genres in the industry

--- a/index.ipynb
+++ b/index.ipynb
@@ -860,7 +860,8 @@
    "source": [
     "- Since the genres are stored as a list of many genres in a row, it is necessary to split them into individual rows\n",
     "- I will also group the Combined DataFrame by genre and calculate the average ratings of each genre as well as the total number of votes\n",
-    "- Then sort to get the top 5 genres by average ratings and the top 5 genres by total number of votes"
+    "- Then sort to get the top 5 genres by average ratings and the top 5 genres by total number of votes\n",
+    "- The results indicate that the top 5 genres by average ratings include: Short, Documentary, Game-Show, News, Biography, while the top 5 genres by total number of votes include: Drama, Action, Adventure, Comedy, Thriller.\n"
    ]
   },
   {
@@ -914,6 +915,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "2. What genres generate the highest gross?\n",
     "- The data being used is a combination of bom.movie_gross.csv data and the im.db data.\n",
@@ -923,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1162,28 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Runtime of Movies: 122.75 minutes\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate the average runtime\n",
-    "average_runtime = imdb_df['runtime_minutes'].mean()\n",
-    "\n",
-    "# Print the average runtime\n",
-    "print(\"Average Runtime of Movies:\", average_runtime, \"minutes\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1183,7 @@
       "2019    114.0\n",
       "Name: runtime_minutes, dtype: float64\n",
       "\n",
-      "Overall Average Runtime: 122.75\n",
+      "Overall Average Runtime of movies: 122.75 minutes\n",
       "\n",
       "Common Runtime Range (25th to 75th percentile): (105.5, 135.25)\n"
      ]
@@ -1217,7 +1202,7 @@
     "# Print the results\n",
     "print(\"Average Movie Runtime by Year:\")\n",
     "print(average_runtime_per_year)\n",
-    "print(\"\\nOverall Average Runtime:\", overall_average_runtime)\n",
+    "print(\"\\nOverall Average Runtime of movies:\", overall_average_runtime, \"minutes\")\n",
     "print(\"\\nCommon Runtime Range (25th to 75th percentile):\", common_runtime_range)\n"
    ]
   },
@@ -1237,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
