Genres with the highest gross

--- a/index.ipynb
+++ b/index.ipynb
@@ -915,16 +915,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "2. What genres generate the highest gross?\n",
     "- The data being used is a combination of bom.movie_gross.csv data and the im.db data.\n",
     "- The reason for the merged DataFrames is because the imdb_df contains the list genres while the bom_movie_gross_df contains the domestic and foreign gross data.\n",
-    "- I am merging the two dataframes using the primary key title and primary_title respectively. This is after I saw those that both columns don't have missing values as well as both columns are unique to the whole table."
+    "- I am merging the two dataframes using the primary key title and primary_title respectively. This is after I saw those that both columns don't have missing values as well as both columns are unique to the whole table.\n",
+    "- From the results its evident that the highest domestic gross is 415000000.0 while foreign gross is 652000000.0\n",
+    "- We can also see that the top 5 highest generating genres is: Action, Adventure, Animation, Biography and Comedy"
    ]
   },
   {
