Average runtime of movies

--- a/index.ipynb
+++ b/index.ipynb
@@ -1164,8 +1164,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. What is the average time of movies?\n",
+    "- Using the start_year column and runtime_minutes column of the imdb_df dataframe I calculated the mean runtime for each year.\n",
+    "- This is so that I can understand what is the average runtime_minutes in each year. 2013 recorded the highest runtime_minutes of around 175.0 min while the lowest recorded runtime_minutes is 80 in 2017.\n",
+    "- I also calcultated the 25th and the 75th percentile of the runtime_minutes where majority of movies fall which is 105.5 mins and 135.25 mins.\n",
+    "- On average movies should have runtime_minutes of 122.75 mins"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1193,7 @@
       "\n",
       "Overall Average Runtime of movies: 122.75 minutes\n",
       "\n",
-      "Common Runtime Range (25th to 75th percentile): (105.5, 135.25)\n"
+      "Common Runtime Range (25th to 75th percentile): (105.5, 135.25) minutes\n"
      ]
     }
    ],
@@ -1200,7 +1211,7 @@
     "print(\"Average Movie Runtime by Year:\")\n",
     "print(average_runtime_per_year)\n",
     "print(\"\\nOverall Average Runtime of movies:\", overall_average_runtime, \"minutes\")\n",
-    "print(\"\\nCommon Runtime Range (25th to 75th percentile):\", common_runtime_range)\n"
+    "print(\"\\nCommon Runtime Range (25th to 75th percentile):\", common_runtime_range, \"minutes\")\n"
    ]
   },
   {
